--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -8,10 +8,15 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: install with Maven
-      run: mvn install
+    - name: Set up JDK
+      uses: actions/setup-java@v2
+      with:
+        distribution: 'adopt'
+        java-version: '11'
+        
     - name: Build with Maven
       run: mvn clean install
+      
     - name: Build with Maven cloud
       run: mvn verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=cloudsonarscan_brunosantos -Dsonar.login=$SONARCLOUD_TOKEN
       env:
